# capswitch

./: AppxManifest.xml  Cargo.toml  LICENSE  README.md  certificate.crt
.github/workflows/: build.yml
src/: autoload.rs  constants.rs  main.rs  switch.rs  tray.rs  utils.rs
